--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: graphclass
 Title: Network classification
 Version: 1.0
 Date: 2017-20-02
-Authors@R: person("Jesús Daniel", "Arroyo Relión", email = "jarroyor@umich.edu", role = c("aut", "cre"))
+Authors@R: person("JesÃºs Daniel", "Arroyo ReliÃ³n", email = "jarroyor@umich.edu", role = c("aut", "cre"))
 Maintainer: Jesus Arroyo <jarroyor@umich.edu>
 Description: Network classification with applications to brain connectomics.
-Depends: R (>= 3.3.2)
+Depends: R (>= 3.0.0)
 Suggests: Matrix
 License: What license is it under?
 Encoding: UTF-8
