--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,12 @@ Package: graphclass
 Title: Network classification
 Version: 1.0
 Date: 2017-20-02
-Authors@R: person("JesÃºs Daniel", "Arroyo ReliÃ³n", email = "jarroyor@umich.edu", role = c("aut", "cre"))
+Author: Jesus Arroyo
+Authors@R: person("Jesús Daniel", "Arroyo Relión", email = "jarroyor@umich.edu", role = c("aut", "cre"))
 Maintainer: Jesus Arroyo <jarroyor@umich.edu>
 Description: Network classification with applications to brain connectomics.
-Depends: R (>= 3.0.0)
-Suggests: Matrix
+Depends: R (>= 3.3.2)
+Imports: Matrix, lattice
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
