--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,8 @@
 useDynLib(graphclass)
+S3method(graphclass,default)
+S3method(predict,graphclass)
+S3method(plot,graphclass)
 export(graphclass)
-export(gc_predict)
 export(construct_D)
 export(plot_adjmatrix)
 export(plot_square_adj_mat)
