--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,14 @@ Package: graphclass
 Title: Network classification
 Version: 1.0
 Date: 2017-20-02
-Author: Jesus Arroyo
+Author: Jesus Arroyo Relion, Daniel Kessler, Elizaveta Levina and Stephan F. Taylor
 Authors@R: person("Jesus Daniel", "Arroyo Relion", email = "jarroyor@umich.edu", role = c("aut", "cre"))
-Maintainer: Jesus Arroyo <jarroyor@umich.edu>
+Maintainer: Jesus Arroyo Relion <jarroyor@umich.edu>
 Description: Network classification with applications to brain connectomics.
 Depends: R (>= 3.2.2)
-Imports: Matrix, lattice
-License: What license is it under?
+Imports: Rdpack, Matrix, lattice
+License:  GPL-2
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.0.9000
+RdMacros: Rdpack
+RoxygenNote: 6.0.1
