--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,12 @@ useDynLib(graphclass)
 S3method(graphclass,default)
 S3method(predict,graphclass)
 S3method(plot,graphclass)
+
 export(graphclass)
 export(construct_D)
 export(plot_adjmatrix)
-export(plot_square_adj_mat)
 export(get_matrix)
 export(node_sparsity)
+export(matrix_to_vec)
+
+importFrom(Rdpack,reprompt)
