--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 S3method(graphclass,default)
 S3method(plot,graphclass)
 S3method(predict,graphclass)
+export(construct_D)
+export(get_matrix)
 export(graphclass)
+export(matrix_to_vec)
+export(node_sparsity)
 export(plot_adjmatrix)
 importFrom(Rdpack,reprompt)
