--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: graphclass
 Title: Network classification
 Version: 1.1
-Date: 2017-20-02
+Date: 2019-09-04
 Author: Jesus Arroyo Relion, Daniel Kessler, Elizaveta Levina and Stephan F. Taylor
 Authors@R: person("Jesus Daniel", "Arroyo Relion", email = "jarroyor@umich.edu", role = c("aut", "cre"))
 Maintainer: Jesus Arroyo Relion <jarroyor@umich.edu>
@@ -10,6 +10,6 @@ Depends: R (>= 3.2.2)
 Imports: Rdpack, Matrix, lattice
 License: GPL-2
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 RdMacros: Rdpack
 RoxygenNote: 6.1.0
