--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,12 @@
-# Makefile for building the C language shared library for the CalcMatrixAvg demonstration package.
+# Makefile for building the C language shared library
 C = gcc
 OPTS = -c -fPIC
 LOADER = gcc
 
-OBJECTS = Pmax2.o
+OBJECTS = graphclass.o
 
- Pmax2.so: $(OBJECTS)
-	R CMD SHLIB -o Pmax2.so $(OBJECTS)
+ graphclass.so: $(OBJECTS)
+	R CMD SHLIB -o graphclass.so $(OBJECTS)
 
 .c.o: ; $(C) $(OPTS) -c $<
 
