--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(matrix_to_vec)
 export(node_sparsity)
 export(plot_adjmatrix)
 importFrom(Rdpack,reprompt)
-useDynLib(Pmax2)
+useDynLib(graphclass)
