--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: graphclass
 Title: Network classification
-Version: 1.1
-Date: 2019-09-04
-Author: Jesus Arroyo Relion, Daniel Kessler, Elizaveta Levina and Stephan F. Taylor
+Version: 1.2
+Date: 2021-04-26
+Author: Jesus D. Arroyo Relion, Daniel Kessler, Elizaveta Levina and Stephan F. Taylor
 Authors@R: person("Jesus Daniel", "Arroyo Relion", email = "jarroyor@umich.edu", role = c("aut", "cre"))
-Maintainer: Jesus Arroyo Relion <jarroyor@umich.edu>
+Maintainer: Jesus D. Arroyo Relion <jarroyor@umich.edu>
 Description: Network classification with applications to brain connectomics.
 Depends: R (>= 3.2.2)
 Imports: Rdpack, Matrix, lattice,
@@ -13,5 +13,5 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: false
 RdMacros: Rdpack
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
 LinkingTo: Rcpp
